--- a/src/App.css
+++ b/src/App.css
@@ -5,38 +5,25 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.task-list {
+  list-style-type: none;
+  padding: 0;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.task-list li {
+  background-color: #fff; /* Màu nền mặc định */
+  padding: 10px;
+  margin-bottom: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.task-list li.completed {
+  background-color: limegreen; /* Màu nền khi task đã hoàn thành */
 }
 
-.card {
-  padding: 2em;
+.task-list li.incomplete {
+  background-color: orange; /* Màu nền khi task chưa hoàn thành */
 }
 
-.read-the-docs {
-  color: #888;
+button {
+  margin-right: 2px;
 }
