--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,10 @@
   text-align: center;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .task-list {
   list-style-type: none;
   padding: 0;
@@ -26,4 +30,46 @@
 
 button {
   margin-right: 2px;
+}
+
+button.edit-task {
+  background-color: #4CAF50; /* Màu xanh lá cây */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Shadow */
+}
+
+button.delete-task {
+  background-color: red; /* Màu xanh lá cây */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Shadow */
+}
+
+button.add-task {
+  background-color: #007bff; /* Màu xanh lá cây */
+  border: none;
+  color: white;
+  padding: 10px 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  cursor: pointer;
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2); /* Shadow */
 }
